# zlib

./: .cirrus.yml  .travis.yml  CMakeLists.txt  README  README.md  meson.build  meson_options.txt
meson/: rename-zconf.py
test/: example.c
tooling/: pkgcheck.sh
tooling/appveyor/: appveyor.yml  junit-results.xml
tooling/drone/: drone.yml
